load("@bazel_skylib//rules:common_settings.bzl",
     "string_flag", "int_setting",
)

string_flag(
    name = "stage",
    values = ["boot", "baseline", "dev"],
    build_setting_default = "boot",
    visibility = ["//visibility:public"]
)

# int_setting(
#     name = "stage0",
#     build_setting_default = 0,
#     visibility = ["//visibility:public"]
# )

# int_setting(
#     name = "stage1",
#     build_setting_default = 1,
#     visibility = ["//visibility:public"]
# )

# int_setting(
#     name = "stage2",
#     build_setting_default = 2,
#     visibility = ["//visibility:public"]
# )

